added chart picker

--- a/package.json
+++ b/package.json
@@ -63,7 +63,21 @@
     "@mui/material": "^5.1.0",
     "@mui/styles": "^5.1.0",
     "@nebula.js/sn-bar-chart": "^1.12.20",
+    "@nebula.js/sn-boxplot": "^0.26.9",
+    "@nebula.js/sn-bullet-chart": "^1.9.19",
+    "@nebula.js/sn-combo-chart": "^1.8.15",
+    "@nebula.js/sn-funnel-chart": "^1.3.13",
+    "@nebula.js/sn-grid-chart": "^1.4.21",
+    "@nebula.js/sn-histogram": "^0.26.0",
+    "@nebula.js/sn-kpi": "^0.8.1",
+    "@nebula.js/sn-line-chart": "^1.15.10",
+    "@nebula.js/sn-mekko-chart": "^1.0.6",
+    "@nebula.js/sn-org-chart": "^1.0.3",
+    "@nebula.js/sn-pie-chart": "^1.11.19",
+    "@nebula.js/sn-sankey-chart": "^1.4.22",
+    "@nebula.js/sn-scatter-plot": "^3.7.0",
     "@nebula.js/sn-table": "^1.7.1",
+    "@nebula.js/sn-waterfall": "^0.25.13",
     "@reduxjs/toolkit": "^1.5.0",
     "date-fns": "^2.25.0",
     "install": "^0.13.0",
